--- a/css.css
+++ b/css.css
@@ -3,79 +3,153 @@
     margin:0px;
     list-style:none;
     text-align: center;
+    background-color: rgba(255, 255, 255, 0.65);
+    height: 80px;
+    left: 0;
+    top: 0;
 }
 #menu ul li { display: inline; }
 #menu ul li a {
 
-    padding: 10px 80px;
+    padding: 27px 80px;
     display: inline-block;
     text-decoration: none;
     color: black;
     text-transform: uppercase;
-    font-size: 18px;
+    font-size: 22px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+   
 }
 
-#img {display: flex;
-flex-direction: row;
-justify-content: center;
-align-items: center;}
-
-#Flavia{justify-content: center;
-align-items: center;}
-
-#Flavia p
-{padding-left: 25%;
-padding-right: 25%;
-text-align: justify;
-line-height: 25px;
-text-indent: 0.0em;}
-
-h2{padding-left: 25%;
-padding-right: 25%;
-text-align: justify;
-line-height: 25px;
-text-indent: 0.0em;}
-                        
-body{
-    background-image:url(img/fundo2.jpg);
-    background-size: 100vw auto;
-    background-repeat: no-repeat;
-    background-position: fixed;
-   }
-
-footer{
-    background-image:url(img/fundo1.jpg);
-    background-size: 100vw auto;
-    background-repeat: no-repeat;
-    height: 100%;
-    position: fixed;
-   }   
-#links {
+#img {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    padding-top: 60px;
+}
+
+#Flavia{justify-content: center;
+align-items: center;}
+
+#Flavia p{
+    padding-left: 25%;
+    padding-right: 25%;
     text-align: justify;
-    }
+    line-height: 30px;
+    text-indent: 0.0em;
+    font-size: 30px;}
+
+#titulo h2, #experiencia-txt h2, #formacao-txt h2{
+    padding-left: 25%;
+    padding-right: 25%;
+    text-align: justify;
+    line-height: 25px;
+    text-indent: 0.0em;
+    font-size: 40px;}
+
+#titulo-port h2{
+    font-size: 40px;
+    padding-left: 20px;
+}
+
+#experiencia-txt, #formacao-txt{
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 4%;
+}
+    
+#experiencia-txt p, #formacao-txt p{
+    padding-left: 25%;
+    padding-right: 25%;
+    text-align: justify;
+    line-height: 18px;
+    text-indent: 0.0em;
+    font-size: 30px;
+}
+
 
 #links2 {
     text-align: justify;     
-    padding-left: 20%;
-    padding-right: 20%;
+    padding-left: 23%;
+    padding-right: 27%;
 }    
 .site1, .site2, .site3, .site4, .site5{
-    padding: 2% 0 0 2%;
+    padding: 2%;
+    margin-bottom: 20px;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 40px;
+}
+
+.site1:hover, .site2:hover, .site3:hover, .site4:hover, .site5:hover {
+    background-color: rgba(5, 156, 167, 0.5);
 }
 
 .site1 div, .site2 div, .site3 div, .site4 div, .site5 div{
     display: inline-block;
 }
 .txt{
-    width: 60%;
-    padding-left: 20px;
+    width: 70%;
+    padding-left: 50px;
+    vertical-align: top;
   }
-  .txt p{
+.txt p{
     text-indent: 1.5em;
     line-height: 1.6em;
+    font-size: 22px;
+    
   }
+body{
+    background-color:#69C9CE;
+    margin: 0;
+}
+#snow{
+    display: block;
+    background-image: url(img/garrafa.png), url(img/hbsis.png), url(img/cabo.png);
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    position: absolute;
+    /* -webkit-animation: snow 1000s linear infinite; */
+    -moz-animation: snow 1000s linear infinite;
+    -ms-animation: snow 600s linear infinite;
+    animation: snow 300s cubic-bezier(0.4, 0, 1, 1) infinite;
+    /* -webkit-transform: translate3d(0,0,0); */
+    -moz-transform: translate3d(0,0,0);
+    -ms-transform: translate3d(0,0,0);
+    -o-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
+
+} 
+@keyframes snow {
+    0% {
+        background-position: 0px 0px, 0px 0px, 0px 0px;
+}
+    100% {
+        background-position: 50000px 50000px, 10000px 20000px, -10000px 15000px;
+}
+}
+
+/*-------------------------------------------------------------footer----------------------------------------------------*/
+footer{
+    margin: 0;
+    padding: 0;
+}
+.rodape{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 8%;
+    background-color: rgba(255, 255, 255, 0.5);
+    text-align: center;
+
+}    
+.rodape li { 
+    display: inline;
+    display: inline-block;
+    color: black;
+    text-transform: uppercase;
+    padding: 1% 3% 1% 3%;
+}
